style: center Visi Misi and fix stats section layout and wrapping on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -394,7 +394,7 @@ footer .col-md-6{
     }
     .stat-label {
         font-size: .7rem;
-        white-space: nowrap;
+        white-space: normal;
     }
 }
 
